-- passphrases are sent to the back end in a more secure way using unix local socket.
-- small attempt to hide passphrases from ps command if they are passed through the command line argument.
-- passphrases stored in kde kwallet can be managed from within zulucrypt-gui if their support is enabled at build time.

version 4.6.0
-- add support for opening and closing of truecrypt volumes,this feature need cryptsetup >= 1.6.0

version 4.6.1
-- fix a regression that caused volumes presented by their UUID not to working

version 4.6.2
-- add config option to not build KDE and/or GNOME support even when the system has support for them
-- add support for LVM volumes
-- add support for consulting udev in addition to fstab when deciding if a system is system or not
-- add tcplay as an optional dependency to allow creation of truecrypt volumes
-- fix bug:truecrypt volumes with multiple ciphers did not close properly
-- fix bug:volumes did not close properly if mount point had a space character among others in it
-- feature added:users who are members of "zulumount-exec" group will have their volumes opened with "exec" mount option.
   This will allow them to be able to execute commands from the mount point.The default and recommended option is not mount with "noexec" option.
-- feature added:A "-M" option is added that will create a publicly accessible "mirror" of a mount point in "/run/share" from the private 
   original one created in "/run/media/$USER.This option is there to allow a user to mount a volume and have it accessible from other users of the system.
-- zuluMount-gui now adds and removed from its list as devices are added and removed from the system.A right click context menu option can be set to allow 
   unencrypted volumes to also be automounted.
-- add a command line option to zuluMount-gui to start it up without showing the GUI 

version 4.6.3
-- fix a build issue on some systems
-- when automounting devices,use device LABEL is present