@@ -275,8 +275,10 @@ else( UDEVSUPPORT STREQUAL "true" )
 endif( UDEVSUPPORT STREQUAL "true" )
 
 install ( FILES zuluCrypt-cli.1.bz2 DESTINATION share/man/man1 )
-install ( FILES zuluCrypt-test.1.bz2 DESTINATION share/man/man1 )
 install ( FILES zuluCrypt-gui.1.bz2 DESTINATION share/man/man1 )
+install ( FILES zuluMount-cli.1.bz2 DESTINATION share/man/man1 )
+install ( FILES zuluMount-gui.1.bz2 DESTINATION share/man/man1 )
+install ( FILES zuluCrypt-test.1.bz2 DESTINATION share/man/man1 )
 
 install ( SCRIPT "${CMAKE_SOURCE_DIR}/PostInstall.cmake")
 
