@@ -124,3 +124,6 @@ version 4.6.2
 version 4.6.3
 -- fix a build issue on some systems
 -- when automounting devices,use device LABEL is present
+-- its now possible to create truecrypt volumes using a keyfile
+-- its now possible to open a truecrypt hidden volume( the feature is currently in zuluMount-cli only )
+-- various bug fixes.
